bin/testsuite/tests/compiler/src/errors/compiler3008.swg
#global testerror "Err0520"
mtd toto()
{

}